--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 /*TAG PAI DE TODAS AS TAGS*/
 body {
-    background: #CCCCCC;
+    margin: 0px;
 }
 
 #banner {
     width: 100%;
 
+}
+
+.principal {
+    background: #CCCCCC;
+    padding: 30px;
 }
 
 h1 {
@@ -22,4 +27,28 @@ p {
 
 em strong {
     color: #FF0000;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.beneficios {
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagemBeneficios {
+    width: 50%;
 }
