--- a/estilos/style.css
+++ b/estilos/style.css
@@ -180,6 +180,38 @@ td, th{
     font-style: italic;
 }
 
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.beneficios {
+    padding: 3em 0;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
 .imagem-beneficios {
     width: 60%;
 }
@@ -190,16 +222,7 @@ td, th{
     margin: 0 20px 20px 0;
 }
 
-.mapa {
-    padding: 3em 0;
-}
-
-.mapa p {
-    margin: 0 0 2em;
-    text-align: center;
-}
-
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
 }
